# GeoFormulas

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GeoFormulas.sln  README.html  README.md
8260.54ATestData/: 8260.54a Test Cases and Expected Results-rev1.xlsx  8260.54a Test Cases and Expected Results.xlsx  8260.54a Test Data Origin.txt  Application test Results.txt
8260.54ATestData/Test Cases and Expected Results in CSV Format/: ArcIntersect.csv  CrsIntersect.csv  Direct.csv  DiscretizedArcLength.csv  GeoLocusIntersect.csv  GeodesicArcIntersect.csv  Inverse.csv  LocusArcIntersect.csv  LocusCrsAtPoint.csv  LocusIntersect.csv  LocusPerpIntercept.csv  LocusTanFixedRadiusArc.csv  PerpIntercept.csv  PerpTangentPoints.csv  PointIsOnArc.csv  PointToArcTangents.csv  PtIsOnGeodesic.csv  PtIsOnLocus.csv  TangentFixedRadiusArc.csv
Excel VBA Macros/: GeoExcelStub.cls  Macro Usage.html  Macro Usage.md
GeoFormulas/: ArcIntercept.cpp  CMakeLists.txt  Conversions.h  CrsIntersect.cpp  DirectArcLength.cpp  DiscretizedArcLength.cpp  DistToLocusD.cpp  DistanceIntersection.cpp  DistanceToLocusP.cpp  ECEF.cpp  FindLinearRoot.cpp  GeoFormulas.h  GeoFormulas.vcproj  GeoFormulas.vcxproj  GeoLocusIntersect.cpp  GeodesicArcIntercept.cpp  Geolib.h  GeometricMeanMeridional.cpp  GetArcExtent.cpp  LocusArcIntersect.cpp  LocusCrsAtPoint.cpp  LocusIntersect.cpp  LocusPerpIntercept.cpp  LocusTanFixedRadiusArc.cpp  Mod.cpp  PerpIntercept.cpp  PerpTangentPoints.cpp  PointOnLocusP.cpp  PointToArcTangents.cpp  PrimeVerticalCurvature.cpp  PtIsOnArc.cpp  PtIsOnGeodesic.cpp  PtIsOnLocus.cpp  RNavConversionException.h  SignAzimuthDifference.cpp  TangentFixedRadiusArc.cpp  VectorMath.h  VincentyDestination.cpp  VincentyDistance.cpp
TerpsTest/: CMakeLists.txt  LatLongConversions.cpp  LatLongConversions.h  TerpsTest.cpp  TerpsTest.vcproj  TerpsTest.vcxproj  TestArcIntersect.cpp  TestCrsIntersect.cpp  TestDirect.cpp  TestDiscretizedArcLength.cpp  TestGeoLocusIntersect.cpp  TestGeodesicArcIntersect.cpp  TestInverse.cpp  TestLocusArcIntersect.cpp  TestLocusCrsAtPoint.cpp  TestLocusIntersect.cpp  TestLocusPerpIntersect.cpp  TestLocusTanFixedRadiusArc.cpp  TestPerpIntercept.cpp  TestPerpTangentPoints.cpp  TestPointToArcTangents.cpp  TestPtIsOnArc.cpp  TestPtIsOnGeodesic.cpp  TestPtIsOnLocus.cpp  TestTangentFixedRadiusArc.cpp
include/: Conversions.h  GeoFormulas.h  Geolib.h  RNavConversionException.h  VectorMath.h  geo_formulas_configure.h  geo_formulas_configure.h.in
